--- a/dist.ini
+++ b/dist.ini
@@ -9,11 +9,11 @@ copyright_holder=Steven Haryanto
 :version=0.23
 
 [Prereqs / TestRequires]
-Test::More=0.98
+;Test::More=0.98
 
 [Prereqs]
 ;!lint-prereqs assume-used # spec
 Rinci=1.1.0
 
 perl=5.010001
-Devel::Declare=0
+;Devel::Declare=0
