[dist] Move spec prereqs from RuntimeRequires to DevelopRecommends to reduce deps but still allow indicating spec requirement

--- a/dist.ini
+++ b/dist.ini
@@ -9,8 +9,9 @@ name=Perinci-Declare
 ;Test::More=0.98
 
 [Prereqs]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.0
-
 perl=5.010001
 ;Devel::Declare=0
+
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used # spec
+Rinci=1.1.0
