--- a/dist.ini
+++ b/dist.ini
@@ -10,8 +10,11 @@ name=Perinci-Declare
 
 [Prereqs]
 perl=5.010001
+strict=0
+warnings=0
 ;Devel::Declare=0
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # spec
 Rinci=1.1.0
+
