--- a/dist.ini
+++ b/dist.ini
@@ -14,7 +14,5 @@ strict=0
 warnings=0
 ;Devel::Declare=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.0
-
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.0
