--- a/dist.ini
+++ b/dist.ini
@@ -14,5 +14,7 @@ strict=0
 warnings=0
 ;Devel::Declare=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.0
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.0
